--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="testimonial">
             <p>"I was able to get my medication delivered on time. Excellent service!"</p>
-            <h4>- Vineet LAAD</h4>
+            <h4>- Vineet Singh Rajput</h4>
         </div>
     </section>
 
