--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section id="testimonials">
         <h2>What Our Patients Say</h2>
         <div class="testimonial">
-            <p>"The online consultation saved me time and helped me get a diagnosis without visiting the clinic."</p>
+            <p>"The online consultation saved my time and helped me get a diagnosis without visiting the clinic."</p>
             <h4>- Sudhanshu Singh</h4>
         </div>
         <div class="testimonial">
