--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
         <h2>Contact Us</h2>
         <p>For inquiries, please reach out to us at:</p>
         <address>
-            Email: support@arogyashala.com<br>
-            Phone: +91 123 456 7890
+            Email: support@arogyasala.com<br>
+            Phone: +91 8102316592
         </address>
     </section>
 
